Refactor map initialization and validation; add functions to count coins, players, and exits

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,8 @@ CC		=	cc
 CFLAGS	=	-Wall -Werror -Wextra -I ../includes/minilibx-linux -I ../includes/ft_printf -I ../includes/libft -I ../includes/get_next_line
 
 SRCS	=	read_map.c \
-			check_map.c
+			check_map.c \
+			init_map.c
 
 OBJS	=	$(SRCS:.c=.o)
 
