Add new character idle animations and wall texture
- Introduced a new wall texture in wall.xpm.
- Each animation file contains unique pixel art for character idle states.
- The wall texture features a detailed design suitable for environmental elements.

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,7 +8,9 @@ SRCS	=	read_map.c \
 			init_map.c \
 			check_path.c \
 			init_player.c \
-			init_game.c
+			init_game.c \
+			init_mlx.c \
+			init_wall.c
 
 OBJS	=	$(SRCS:.c=.o)
 
