Add new demon textures for enemy sprites, added enemy animation scripts
- Introduced demon_2.xpm and demon_3.xpm files containing pixel art for enemy sprites.
- Each texture features a unique color palette and design, enhancing the visual diversity of enemy characters in the game.

--- a/src/Makefile
+++ b/src/Makefile
@@ -13,7 +13,9 @@ SRCS	=	read_map.c \
 			init_wall.c \
 			keys.c \
 			player_animation.c \
-			main_animation.c
+			main_animation.c \
+			init_enemy.c \
+			enemy_animation.c
 
 OBJS	=	$(SRCS:.c=.o)
 
