Refactor map validation and error handling; add free_game function for resource management; update Makefile to include free_game.c

--- a/src/Makefile
+++ b/src/Makefile
@@ -19,7 +19,8 @@ SRCS	=	read_map.c \
 			init_coin.c \
 			coin_animation.c \
 			init_door.c \
-			door_animation.c
+			door_animation.c \
+			free_game.c
 
 OBJS	=	$(SRCS:.c=.o)
 
